name:               sigplan
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          src/Main.hs
  build-depends:    base         == 4.*
                  , hakyll       == 4.7.*
                  , data-default == 0.5.*
  ghc-options:      -threaded
                    -j8 -O0 -dynamic
  default-language: Haskell2010
